--- a/MusicApp/html/Home.html
+++ b/MusicApp/html/Home.html
@@ -31,7 +31,7 @@
         <div class="dashboard__options">
           <div class="dashboard__option">
             <img src="../img/Home/mixes.png" alt="" class="dashboard__logo" />
-            <a href="/" class="dashboard__link">
+            <a href="./Home.html" class="dashboard__link">
               <div class="dashboard__icon"></div>
               Mixes and Radio</a
             >
@@ -43,35 +43,35 @@
               alt=""
               class="dashboard__logo"
             />
-            <a href="/" class="dashboard__link">
+            <a href="./Home.html" class="dashboard__link">
               <div class="dashboard__icon"></div>
               Playlists</a
             >
           </div>
           <div class="dashboard__option">
             <img src="../img/Home/albums.png" alt="" class="dashboard__logo" />
-            <a href="/" class="dashboard__link">
+            <a href="./Albums.html" class="dashboard__link">
               <div class="dashboard__icon"></div>
               Albums</a
             >
           </div>
           <div class="dashboard__option">
             <img src="../img/Home/tracks.png" alt="" class="dashboard__logo" />
-            <a href="/" class="dashboard__link">
+            <a href="./Song.html" class="dashboard__link">
               <div class="dashboard__icon"></div>
               Tracks</a
             >
           </div>
           <div class="dashboard__option">
             <img src="../img/Home/videos.png" alt="" class="dashboard__logo" />
-            <a href="/" class="dashboard__link">
+            <a href="./Home.html" class="dashboard__link">
               <div class="dashboard__icon"></div>
               Videos</a
             >
           </div>
           <div class="dashboard__option">
             <img src="../img/Home/artist.png" alt="" class="dashboard__logo" />
-            <a href="/" class="dashboard__link">
+            <a href="Artist.html" class="dashboard__link">
               <div class="dashboard__icon"></div>
               Artists</a
             >
