--- a/MusicApp/html/Song.html
+++ b/MusicApp/html/Song.html
@@ -19,70 +19,75 @@
 
     <section>
         <div class="dashboard">
-
-            <section class="top">
-                <input type="text" name="" id="" class="main__search" placeholder="Search">
-
-            </section>
-
-            <div class="dashboard__options">
-                <div class="dashboard__option">
-                    <img src="../img/Home/mixes.png" alt="" class="dashboard__logo">
-                    <a href="/" class="dashboard__link">
-                        <div class="dashboard__icon"></div>
-                        Mixes and Radio
-                    </a>
-                </div>
-
-                <div class="dashboard__option">
-                    <img src="../img/Home/playlist.png" alt="" class="dashboard__logo">
-                    <a href="/" class="dashboard__link">
-                        <div class="dashboard__icon"></div>
-                        Playlists
-                    </a>
-                </div>
-                <div class="dashboard__option">
-                    <img src="../img/Home/albums.png" alt="" class="dashboard__logo">
-                    <a href="/" class="dashboard__link">
-                        <div class="dashboard__icon"></div>
-                        Albums
-                    </a>
-                </div>
-                <div class="dashboard__option">
-                    <img src="../img/Home/tracks.png" alt="" class="dashboard__logo">
-                    <a href="/" class="dashboard__link">
-                        <div class="dashboard__icon"></div>
-                        Tracks
-                    </a>
-                </div>
-                <div class="dashboard__option">
-                    <img src="../img/Home/videos.png" alt="" class="dashboard__logo">
-                    <a href="/" class="dashboard__link">
-                        <div class="dashboard__icon"></div>
-                        Videos
-                    </a>
-                </div>
-                <div class="dashboard__option">
-                    <img src="../img/Home/artist.png" alt="" class="dashboard__logo">
-                    <a href="/" class="dashboard__link">
-                        <div class="dashboard__icon"></div>
-                        Artists
-                    </a>
-                </div>
+          <section class="top">
+            <input
+              type="text"
+              name=""
+              id=""
+              class="main__search"
+              placeholder="Search"
+            />
+          </section>
+  
+          <div class="dashboard__options">
+            <div class="dashboard__option">
+              <img src="../img/Home/mixes.png" alt="" class="dashboard__logo" />
+              <a href="./Home.html" class="dashboard__link">
+                <div class="dashboard__icon"></div>
+                Mixes and Radio</a
+              >
             </div>
-
-            <section class="bottom">
-                <img src="../img/Home/dashboard.png" alt="" class="">
-                <h1 class="song__name">Fine Line</h1>
-                <h1 class="artist__name">Harry Style</h1>
-                <img src="../img/Home/Rectangle 2223.png" alt="" class="">
-                <img src="../img/Home/Top-controls.png" alt="" class="Top-controls">
-
-            </section>
-
-
+  
+            <div class="dashboard__option">
+              <img
+                src="../img/Home/playlist.png"
+                alt=""
+                class="dashboard__logo"
+              />
+              <a href="./Home.html" class="dashboard__link">
+                <div class="dashboard__icon"></div>
+                Playlists</a
+              >
+            </div>
+            <div class="dashboard__option">
+              <img src="../img/Home/albums.png" alt="" class="dashboard__logo" />
+              <a href="./Albums.html" class="dashboard__link">
+                <div class="dashboard__icon"></div>
+                Albums</a
+              >
+            </div>
+            <div class="dashboard__option">
+              <img src="../img/Home/tracks.png" alt="" class="dashboard__logo" />
+              <a href="./Song.html" class="dashboard__link">
+                <div class="dashboard__icon"></div>
+                Tracks</a
+              >
+            </div>
+            <div class="dashboard__option">
+              <img src="../img/Home/videos.png" alt="" class="dashboard__logo" />
+              <a href="./Home.html" class="dashboard__link">
+                <div class="dashboard__icon"></div>
+                Videos</a
+              >
+            </div>
+            <div class="dashboard__option">
+              <img src="../img/Home/artist.png" alt="" class="dashboard__logo" />
+              <a href="Artist.html" class="dashboard__link">
+                <div class="dashboard__icon"></div>
+                Artists</a
+              >
+            </div>
+          </div>
+  
+          <section class="bottom">
+            <img src="../img/Home/dashboard.png" alt="" class="" />
+            <h1 class="song__name">Fine Line</h1>
+            <h1 class="artist__name">Harry Style</h1>
+            <img src="../img/Home/Rectangle 2223.png" alt="" class="" />
+            <img src="../img/Home/Top-controls.png" alt="" class="Top-controls" />
+          </section>
         </div>
-    </section>
+      </section>
 
     <section class="head">
         <div class="left">
@@ -99,7 +104,7 @@
         <div class="right">
             <img src="../img/Home/Ellipse 2.png" alt="" class="">
             <div class="right__info">
-                <h1 class="user__name">Maria Paula</h1>
+                <h1 class="user__name" id="nameUser">Maria Paula</h1>
                 <h1 class="artist__name">Premium member</h1>
             </div>
         </div>
