--- a/MusicApp/html/Artist.html
+++ b/MusicApp/html/Artist.html
@@ -100,7 +100,7 @@
         <div class="right">
             <img src="../img/Home/Ellipse 2.png" alt="" class="">
             <div class="right__info">
-                <h1 class="user__name">Maria Paula</h1>
+                <h1 class="user__name" id="nameUser">Maria Paula</h1>
                 <h1 class="artist__name">Premium member</h1>
             </div>
         </div>
